--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bluebird": "3.0.5",
     "lodash": "3.10.1",
     "nock": "3.1.1",
-    "parsick": "git+https://github.com/thebergamo/parsick.git",
+    "parsick": "git+https://github.com/thebergamo/parsick.git#es5",
     "request-promise": "1.0.2"
   },
   "devDependencies": {
